--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -7,6 +7,13 @@
   min-height: 100vh;
 }
 
+.title {
+  text-align: center;
+  font-size: 2rem;
+  font-weight: 600;
+  color: #fff;
+}
+
 .description {
   display: inherit;
   justify-content: inherit;
@@ -97,7 +104,7 @@
 
 .center::before,
 .center::after {
-  content: '';
+  content: "";
   left: 50%;
   position: absolute;
   filter: blur(45px);
@@ -125,7 +132,7 @@
 
 .thirteen::before,
 .thirteen::after {
-  content: '';
+  content: "";
   position: absolute;
   z-index: -1;
 }
